# new_agreement

./: app.py  messages.pot  models.py  pyproject.toml  replit.nix  templates.py
services/: ai_service.py  qr_service.py  verification_service.py
static/css/: custom.css
static/js/: signature.js  template-loader.js  voice.js
templates/: base.html  create_agreement.html  index.html  sign_agreement.html  verify_agreement.html  view_agreement.html
translations/de/LC_MESSAGES/: messages.mo  messages.po
translations/es/LC_MESSAGES/: messages.mo  messages.po
translations/fr/LC_MESSAGES/: messages.mo  messages.po
translations/zh/LC_MESSAGES/: messages.mo  messages.po
